--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "axios": "^0.19.1",
     "core-js": "^3.6.4",
-    "regenerator-runtime": "^0.13.3"
+    "fractional": "^1.0.0",
+    "regenerator-runtime": "^0.13.3",
+    "uniqid": "^5.2.0"
   }
 }
